--- a/nuget.config
+++ b/nuget.config
@@ -5,4 +5,10 @@
 		<add key="KooleControls" value="https://pkgs.dev.azure.com/koolecontrols/_packaging/koolecontrols/nuget/v3/index.json" />
 
 	</packageSources>
+	<packageSourceCredentials>
+		<AzureArtifacts>
+		  <add key="Username" value="AzureDevOps" />
+		  <add key="ClearTextPassword" value="%AZURE_ARTIFACTS_PAT%" />
+		</AzureArtifacts>
+	  </packageSourceCredentials>
 </configuration>
