--- a/LogViewer/LogViewer.csproj
+++ b/LogViewer/LogViewer.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <PackageReference Include="KC.InternalApiClient" Version="0.36.0.4" />
     <PackageReference Include="Markdig" Version="0.37.0" />
+    <PackageReference Include="Octokit" Version="14.0.0" />
     <PackageReference Include="YamlDotNet" Version="16.1.0" />
   </ItemGroup>
   <ItemGroup>
