Added vacantAutoHeat state of heatmanager

--- a/Config/Gateway/Manager.yaml
+++ b/Config/Gateway/Manager.yaml
@@ -36,6 +36,7 @@ profiles:
           2: Cooling
           3: Heating
           4: Off
+          5: VacantAutoHeat
         includeLogs:
           SoftwareId: SmarthomeGateway
           LogCode: HeatmanagerStateChanged
