--- a/Config/Organisations.yaml
+++ b/Config/Organisations.yaml
@@ -1,70 +1,128 @@
 organisations:
-  koole_controls:
-    name: Koole Controls
-    organisationId: 1
-    basePath: https://api.koolecontrols.nl/kc/live/api
-    authenticationMethod: GetOAuth2_ApplicationFlowClient
-    authPath: https://accounts.kcsmart.net/realms/kc
 
-  roompot:
-    name: Roompot
+  DNR:
+    name: Duinrell
     organisationId: 1
-    basePath: https://rvp.kcsmartho.me/api
+    basePath: https://dnr.kcsmartho.me/api
     authenticationMethod: GetOAuth2_OpenIdConnectClient
-    authPath: https://accounts.kcsmart.net/realms/rvp
+    authPath: https://accounts.kcsmart.net/realms/dnr
 
-  krim:
+  HZL:
+    name: Hello Zeeland
+    organisationId: 1
+    basePath: https://hzl.kcsmartho.me/api
+    authenticationMethod: GetOAuth2_OpenIdConnectClient
+    authPath: https://accounts.kcsmart.net/realms/hzl
+
+  HVN:
+    name: Hof van Nassau
+    organisationId: 1
+    basePath: https://hvn.kcsmartho.me/api
+    authenticationMethod: GetOAuth2_OpenIdConnectClient
+    authPath: https://accounts.kcsmart.net/realms/hvn
+
+  HOF:
+    name: Hofparken
+    organisationId: 1
+    basePath: https://hof.kcsmartho.me/api
+    authenticationMethod: GetOAuth2_OpenIdConnectClient
+    authPath: https://accounts.kcsmart.net/realms/hof
+
+  KMC:
+    name: KMC
+    organisationId: 1
+    basePath: https://kmc.kcsmartho.me/api
+    authenticationMethod: GetOAuth2_OpenIdConnectClient
+    authPath: https://accounts.kcsmart.net/realms/kmc
+
+  KRM:
     name: De Krim
     organisationId: 1
-    basePath: https://api.koolecontrols.nl/krim/live/api
-    authenticationMethod: GetOAuth2_ApplicationFlowClient
-    authPath: https://accounts.kcsmart.net/realms/kc
-  
-  libema:
+    basePath: https://krm.kcsmartho.me/api
+    authenticationMethod: GetOAuth2_OpenIdConnectClient
+    authPath: https://accounts.kcsmart.net/realms/krm
+
+  LIB:
     name: Libema
     organisationId: 1
     basePath: https://lib.kcsmartho.me/api
     authenticationMethod: GetOAuth2_OpenIdConnectClient
     authPath: https://accounts.kcsmart.net/realms/lib
 
-  veerse_pot:
+  ONS:
+    name: OnsBuiten
+    organisationId: 1
+    basePath: https://ons.kcsmartho.me/api
+    authenticationMethod: GetOAuth2_OpenIdConnectClient
+    authPath: https://accounts.kcsmart.net/realms/ons
+
+  RCN:
+    name: RCN google
+    organisationId: 1
+    basePath: https://rcn.kcsmartho.me/api
+    authenticationMethod: GetOAuth2_OpenIdConnectClient
+    authPath: https://accounts.kcsmart.net/realms/rcn
+
+  RVP:
+    name: Roompot
+    organisationId: 1
+    basePath: https://rvp.kcsmartho.me/api
+    authenticationMethod: GetOAuth2_OpenIdConnectClient
+    authPath: https://accounts.kcsmart.net/realms/rvp
+
+  PHF:
+    name: Parkhof
+    organisationId: 1
+    basePath: https://phf.kcsmartho.me/api
+    authenticationMethod: GetOAuth2_OpenIdConnectClient
+    authPath: https://accounts.kcsmart.net/realms/phf
+
+  TPT:
+    name: TopTotaal
+    organisationId: 1
+    basePath: https://tpt.kcsmartho.me/api
+    authenticationMethod: GetOAuth2_OpenIdConnectClient
+    authPath: https://accounts.kcsmart.net/realms/tpt
+
+  UBK:
+    name: Greenboutique
+    organisationId: 1
+    basePath: https://ubk.kcsmartho.me/api
+    authenticationMethod: GetOAuth2_OpenIdConnectClient
+    authPath: https://accounts.kcsmart.net/realms/ubk
+
+  VGB:
+    name: Strandpark Vlugtenburg
+    organisationId: 1
+    basePath: https://vgb.kcsmartho.me/api
+    authenticationMethod: GetOAuth2_OpenIdConnectClient
+    authPath: https://accounts.kcsmart.net/realms/vgb
+
+  VPT:
     name: Veerse Pot
     organisationId: 1
     basePath: https://vpt.kcsmartho.me/api
     authenticationMethod: GetOAuth2_OpenIdConnectClient
     authPath: https://accounts.kcsmart.net/realms/vpt
 
-  rcn:
-    name: RCN
+  WWS:
+    name: WaerWaters
     organisationId: 1
-    basePath: https://api.koolecontrols.nl/rcn/live/api
-    authenticationMethod: GetOAuth2_ApplicationFlowClient
-    authPath: https://accounts.kcsmart.net/realms/kc
-
-  rcn_google:
-    name: RCN Google
-    organisationId: 1
-    basePath: https://rcn.kcsmartho.me/api
+    basePath: https://wws.kcsmartho.me/api
     authenticationMethod: GetOAuth2_OpenIdConnectClient
-    authPath: https://accounts.kcsmart.net/realms/rcn
+    authPath: https://accounts.kcsmart.net/realms/wws
 
   aedes:
-    name: Aedes
+    name: Aedes (interne server)
     organisationId: 1
     basePath: https://api.koolecontrols.nl/aedesmaritima/live/api
     authenticationMethod: GetOAuth2_ApplicationFlowClient
     authPath: https://accounts.kcsmart.net/realms/kc
-
-  ons_buiten:
-    name: Ons Buiten
+    
+  rcn:
+    name: RCN (interne server)
     organisationId: 1
-    basePath: https://ons.kcsmartho.me/api
-    authenticationMethod: GetOAuth2_OpenIdConnectClient
-    authPath: https://accounts.kcsmart.net/realms/ons
-
-  top_totaal:
-    name: Top Totaal
-    organisationId: 1
-    basePath: https://tpt.kcsmartho.me/api
-    authenticationMethod: GetOAuth2_OpenIdConnectClient
-    authPath: https://accounts.kcsmart.net/realms/tpt
+    basePath: https://api.koolecontrols.nl/rcn/live/api
+    authenticationMethod: GetOAuth2_ApplicationFlowClient
+    authPath: https://accounts.kcsmart.net/realms/kc
+    
