--- a/Config/Gateway/IndoorUnit_0.yaml
+++ b/Config/Gateway/IndoorUnit_0.yaml
@@ -11,7 +11,7 @@ profiles:
         visible: WhenData
         includeLogs:
           SoftwareId: SmarthomeGateway
-          LogCode: CMN_IndoorUnit_ActualTempChanged
+          LogCode: Hvac_ActualTempChanged
           DeviceId: 0
 
       iu_0_setpoint: 
@@ -23,7 +23,7 @@ profiles:
         visible: WhenData
         includeLogs:
           SoftwareId: SmarthomeGateway
-          LogCode: CMN_IndoorUnit_SetpointChanged
+          LogCode: Hvac_SetpointChanged
           DeviceId: 0
 
       iu_0_mode: 
@@ -33,40 +33,48 @@ profiles:
         drawStyle: State
         drawOption: ExtendEnd, DrawNames
         visible: WhenData
-        offset: -12
+        offset: -9
         stateNames:
-          0: Cool	      
-          1: Heat	      
-          2: Auto	      
-          3: Dry           
-          4: HAUX	      
-          5: Fan	          
-          6: HH	          
-          7: VAM_Auto	  
-          8: VAM_Bypass	  
-          9: VAM_Heat_Exch 
-          10: VAM_Normal    
-          11: Unknown		  
-          12: Off	
+          0: Off	      
+          1: Heating   
+          2: Cooling	      
+          3: Auto           
+          4: Unknown	      
         includeLogs:
           SoftwareId: SmarthomeGateway
-          LogCode: CMN_IndoorUnit_ModeChanged
+          LogCode: Hvac_ModeChanged
           DeviceId: 0
 
-      iu_0_power: 
-        name: IU 0 Power
+      iu_0_heatingActive:
+        name: IU 0 Heating Active
         unit: ""
-        color: 0xFFFF3D3D
+        color: 0xFFFF6F00
         drawStyle: State
         drawOption: ExtendEnd, DrawNames
         visible: WhenData
-        offset: -13.5
+        offset: -10.5
         stateNames:
-          0: Off
-          1: On
+          0: Inactive
+          1: Active
         includeLogs:
           SoftwareId: SmarthomeGateway
-          LogCode: CMN_IndoorUnit_OnOffChanged
+          LogCode: Hvac_HeatingActiveChanged
+          DeviceId: 0
+
+      iu_0_coolingActive:
+        name: IU 0 Cooling Active
+        unit: ""
+        color: 0xFF0074CC
+        drawStyle: State
+        drawOption: ExtendEnd, DrawNames
+        visible: WhenData
+        offset: -12
+        stateNames:
+          0: Inactive
+          1: Active
+        includeLogs:
+          SoftwareId: SmarthomeGateway
+          LogCode: Hvac_CoolingActiveChanged
           DeviceId: 0
 
       iu_0_fault: 
@@ -76,8 +84,10 @@ profiles:
         drawStyle: State
         drawOption: ExtendEnd, DrawNames
         visible: WhenData
-        offset: -15
+        offset: -13.5
         includeLogs:
           SoftwareId: SmarthomeGateway
-          LogCode: CMN_IndoorUnit_FaultCodeChanged
+          LogCode: Hvac_FaultCodeChanged
           DeviceId: 0
+
+          
