--- a/Config/Gateway/IndoorUnit_1.yaml
+++ b/Config/Gateway/IndoorUnit_1.yaml
@@ -11,7 +11,7 @@ profiles:
         visible: WhenData
         includeLogs:
           SoftwareId: SmarthomeGateway
-          LogCode: CMN_IndoorUnit_ActualTempChanged
+          LogCode: Hvac_ActualTempChanged
           DeviceId: 1
 
       iu_1_setpoint: 
@@ -23,50 +23,59 @@ profiles:
         visible: WhenData
         includeLogs:
           SoftwareId: SmarthomeGateway
-          LogCode: CMN_IndoorUnit_SetpointChanged
+          LogCode: Hvac_SetpointChanged
           DeviceId: 1
 
-      iu_1_mode: 
-        name: IU 1 Mode
+
+      iu_0_mode: 
+        name: IU 0 Mode
         unit: ""
         color: 0xFFFF3D3D
+        drawStyle: State
+        drawOption: ExtendEnd, DrawNames
+        visible: WhenData
+        offset: -15
+        stateNames:
+          0: Off	      
+          1: Heating   
+          2: Cooling	      
+          3: Auto           
+          4: Unknown	      
+        includeLogs:
+          SoftwareId: SmarthomeGateway
+          LogCode: Hvac_ModeChanged
+          DeviceId: 0
+
+      iu_1_heatingActive:
+        name: IU 1 Heating Active
+        unit: ""
+        color: 0xFFFF6F00
         drawStyle: State
         drawOption: ExtendEnd, DrawNames
         visible: WhenData
         offset: -16.5
         stateNames:
-          0: Cool	      
-          1: Heat	      
-          2: Auto	      
-          3: Dry           
-          4: HAUX	      
-          5: Fan	          
-          6: HH	          
-          7: VAM_Auto	  
-          8: VAM_Bypass	  
-          9: VAM_Heat_Exch 
-          10: VAM_Normal    
-          11: Unknown		  
-          12: Off	
+          0: Inactive
+          1: Active
         includeLogs:
           SoftwareId: SmarthomeGateway
-          LogCode: CMN_IndoorUnit_ModeChanged
+          LogCode: Hvac_HeatingActiveChanged
           DeviceId: 1
 
-      iu_1_power: 
-        name: IU 1 Power
+      iu_1_coolingActive:
+        name: IU 1 Cooling Active
         unit: ""
-        color: 0xFFFF3D3D
+        color: 0xFF0074CC
         drawStyle: State
         drawOption: ExtendEnd, DrawNames
         visible: WhenData
         offset: -18
         stateNames:
-          0: Off
-          1: On
+          0: Inactive
+          1: Active
         includeLogs:
           SoftwareId: SmarthomeGateway
-          LogCode: CMN_IndoorUnit_OnOffChanged
+          LogCode: Hvac_CoolingActiveChanged
           DeviceId: 1
 
       iu_1_fault: 
@@ -79,5 +88,5 @@ profiles:
         offset: -19.5
         includeLogs:
           SoftwareId: SmarthomeGateway
-          LogCode: CMN_IndoorUnit_FaultCodeChanged
+          LogCode: Hvac_FaultCodeChanged
           DeviceId: 1
