--- a/Config/Gateway/Manager.yaml
+++ b/Config/Gateway/Manager.yaml
@@ -18,7 +18,6 @@ profiles:
           4: TempOverride
           5: Initializing
           6: NightTime
-          7: ExtendedNightTime 
         includeLogs:
           SoftwareId: SmarthomeGateway
           LogCode: SmartHomeStateChanged
@@ -36,36 +35,7 @@ profiles:
           2: Cooling
           3: Heating
           4: Off
-          5: VacantAutoHeat
+          5: FrostProtection
         includeLogs:
           SoftwareId: SmarthomeGateway
           LogCode: HeatmanagerStateChanged
-      Heating:
-        name: Heating
-        unit: ""
-        color: 0xFFFF6F00
-        offset: -7.5
-        drawStyle: State
-        drawOption: ExtendEnd, DrawNames
-        visible: Always
-        stateNames:
-          0: Off
-          1: On
-        includeLogs:
-          SoftwareId: SmarthomeGateway
-          LogCode: HeaterActiveChanged
-      Cooling:
-        name: Cooling
-        unit: ""
-        color: 0xFF0074CC
-        offset: -10.5
-        drawStyle: State
-        drawOption: ExtendEnd, DrawNames
-        visible: Always
-        stateNames:
-          0: Off
-          1: On
-        includeLogs:
-          SoftwareId: SmarthomeGateway
-          LogCode: CoolerActiveChanged
-            
