--- a/LogViewer/LogViewer.csproj
+++ b/LogViewer/LogViewer.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <PackageReference Include="KC.InternalApiClient" Version="2025.25.0" />
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.6" />
+    <PackageReference Include="MQTTnet" Version="5.0.1.1416" />
     <PackageReference Include="Octokit" Version="14.0.0" />
     <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.11" />
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
