--- a/LogViewer/LogViewer.csproj
+++ b/LogViewer/LogViewer.csproj
@@ -9,6 +9,7 @@
     <Configurations>Debug;Release;Demo</Configurations>
 	  <NuGetInteractive>true</NuGetInteractive>
     <Version>0.0.0</Version>
+    <ApplicationIcon>Gemini_Generated_Image_n7dkb3n7dkb3n7dk (1).ico</ApplicationIcon>
   </PropertyGroup>
 		
   <ItemGroup>
@@ -26,6 +27,10 @@
     <None Remove="Resources\system_organisations.yaml" />
     <None Remove="Resources\user_organisations.yaml" />
     <None Remove="Resources\vscode.settings.json" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <Content Include="Gemini_Generated_Image_n7dkb3n7dkb3n7dk (1).ico" />
   </ItemGroup>
 	
   <ItemGroup>
